--- a/src/css-folder/TrackerList.css
+++ b/src/css-folder/TrackerList.css
@@ -9,7 +9,6 @@
 
 .child {
     background-color: #111827;
-    /* border: 1px solid transparent; */
     border-radius: .75rem;
     box-sizing: border-box;
     color: #FFFFFF;
@@ -38,6 +37,42 @@
 }
 
 .login:focus {
+    box-shadow: none;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+}
+
+
+.Add-child {
+    background-color: rgb(63, 178, 249);
+    border-radius: .75rem;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    flex: 0 0 auto;
+    font-family: "Inter var", ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 1.125rem;
+    font-weight: 600;
+    line-height: 1.5rem;
+    padding: .75rem 1.2rem;
+    text-align: center;
+    text-decoration: none #6B7280 solid;
+    text-decoration-thickness: auto;
+    transition-duration: .2s;
+    transition-property: background-color, border-color, color, fill, stroke;
+    transition-timing-function: cubic-bezier(.4, 0, 0.2, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 50%;
+    margin: 20px;
+}
+
+.Add-child:hover {
+    background-color: rgb(110, 196, 249);
+}
+
+.Add-child:focus {
     box-shadow: none;
     outline: 2px solid transparent;
     outline-offset: 2px;
