--- a/src/css-folder/Map.css
+++ b/src/css-folder/Map.css
@@ -1,10 +1,10 @@
-.map-container {
+/* .map-container {
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-  }
+  } */
   
   /* .sidebarStyle {
     display: inline-block;
@@ -19,7 +19,7 @@
     font-weight: bold;
   }
    */
-  .marker {
+  /* .marker {
     display: absolute;
     top: 50%;
     left: 50%;
@@ -33,4 +33,4 @@
     font-size: 16px;
     margin: 4px 2px;
     border-radius: 50%;
-  }
+  } */
